--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
 
-      <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
-
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <h3>Дипломная работа</h3>
+      <p>Построение триангуляции Делоне</p>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        Тел.
+        <a href="tel:89043527550">89043527550</a> 
+        Почта
+        <a href="mailto:anastasiagromova@inbox.ru">anastasiagromova@inbox.ru</a> 
       </div>
     </footer>
   </body>
